2007-03-11  Juri Linkov <juri@jurta.org>

	* replace.el (match): Use yellow background on light-bg terminals.

2007-03-11  Richard Stallman  <rms@gnu.org>

	* emacs-lisp/bytecomp.el (byte-compile-warning-prefix): 
	Correctly compute line number.
	
2007-03-11  Guanpeng Xu  <herberteuler@hotmail.com>

	* type-break.el (type-break-get-previous-count): 
	Repeat previous change here.

2007-03-11  Dan Nicolaescu  <dann@ics.uci.edu>

	* progmodes/grep.el (grep-find-ignored-directories): Add .git and
	.bzr to list.

2007-03-11  Andreas Schwab  <schwab@suse.de>

	* diff-mode.el (diff-apply-hunk): Use proper format string for
	error.

2007-03-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mail/emacsbug.el (report-emacs-bug): Don't hard code the "X" name.

2007-03-10  Chong Yidong  <cyd@stupidchicken.com>

	* faces.el (face-set-after-frame-default): Recalculate face
	customizations after applying X resources.

2007-03-10  Ryan Yeske  <rcyeske@gmail.com>

	* net/rcirc.el (rcirc-timeout-seconds): New variable.
	(rcirc-keepalive-seconds): Remove variable.
	(rcirc-server-name, rcirc-timeout-timer, rcirc-connecting)
	(rcirc-process, rcirc-user-disconnect): New variables.
	(rcirc-connect): Initalize new variables.
	(rcirc-keepalive): Don't send keepalive pings before connection
	is completed.
	(rcirc-sentinel): Do mark all channels with activity when
	connection is dropped.  Run hook with process buffer local.
	(rcirc-reschedule-timeout, rcirc-delete-process): New functions.
	(rcirc-buffer-process): Return value of rcirc-process if
	rcirc-server-buffer is nil.
	(rcirc-server-name): Return the reported server name.
	(rcirc-update-prompt): Simplify computation of the server name.
	(rcirc-format-response-string): Likewise.
	(rcirc-handler-001): Mark server as connected, record the reported
	server name, and schedule a timeout.
	(rcirc-track-nick): Add a spec for the tty class.
	(rcirc-user-non-nick): Remove function.
	(rcirc-nick-prefix-chars): Add variable.