@@ -1078,6 +1078,15 @@ This function could be in the list `eshell-output-filter-functions'."
 (custom-add-option 'eshell-output-filter-functions
 		   'eshell-handle-control-codes)
 
+(defun eshell-handle-ansi-color ()
+  "Handle ANSI color codes."
+  (require 'ansi-color)
+  (ansi-color-apply-on-region eshell-last-output-start
+                              eshell-last-output-end))
+
+(custom-add-option 'eshell-output-filter-functions
+		   'eshell-handle-ansi-color)
+
 ;;; Code:
 
 ;;; arch-tag: ec65bc2b-da14-4547-81d3-a32af3a4dc57
